--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body{
     background-image: url(assets/grid.png);
     background-size: 5vw;
     padding-top: 170px;
-
+    user-select: none;
 }
 #panel{
     top: 0;
@@ -87,4 +87,24 @@ footer{
     top: 100px;
     left: 50%;
     transform: translate(-50%, 0%);
+    margin: 0;
+    padding: 0;
+    border: 0;
+}
+table, td, tr, tbody{
+    margin: 0;
+    padding: 0;
+    border: 0;
+}
+td{
+    width: 75px;
+    height: 75px;
+}
+.cell{
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    font-size: 65px;
+    
 }
