--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ a:hover{
     transform: translate(-50%,0);
     text-align: center;
     width: 1000px;
-    min-height: 99%;
+    height: 2000px;
     background-color: rgba(255, 255, 255, 0.7);
 }
 
@@ -106,5 +106,7 @@ td{
     margin: 0;
     padding: 0;
     font-size: 65px;
-    
+}
+.cell:hover{
+    cursor: pointer;
 }
