--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ h3{
     white-space: nowrap;
     overflow: hidden;
 }
+
 h2{
     margin-top: 25px;
     text-align: center;
@@ -30,6 +31,11 @@ h2{
     white-space: nowrap;
     overflow: hidden;
 }
+@media screen and (max-width: 1000px) {
+    h2 {
+       font-size: 2.5vw;
+    }
+  }
 a{
     color: black;
     padding-left: 10px;
@@ -58,7 +64,8 @@ a:hover{
     left: 50%;
     transform: translate(-50%,0);
     text-align: center;
-    width: 1000px;
+    width: 100%;
+    max-width: 1000px;
     height: 2000px;
     background-color: rgba(255, 255, 255, 0.7);
 }
