--- a/style.css
+++ b/style.css
@@ -31,11 +31,7 @@ h2{
     white-space: nowrap;
     overflow: hidden;
 }
-@media screen and (max-width: 1000px) {
-    h2 {
-       font-size: 2.5vw;
-    }
-  }
+
 a{
     color: black;
     padding-left: 10px;
@@ -64,8 +60,8 @@ a:hover{
     left: 50%;
     transform: translate(-50%,0);
     text-align: center;
-    width: 100%;
-    max-width: 1000px;
+    
+    width: 1000px;
     height: 2000px;
     background-color: rgba(255, 255, 255, 0.7);
 }
@@ -117,3 +113,12 @@ td{
 .cell:hover{
     cursor: pointer;
 }
+
+@media screen and (max-width: 1000px) {
+    h2 {
+       font-size: 2.5vw;
+    }
+    .content{
+        width: 90vw;
+    }
+  }
