--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ h3{
 }
 
 h2{
-    margin-top: 25px;
+    /*margin-top: 25px;*/
     text-align: center;
     font-size: 30px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;  
@@ -60,9 +60,8 @@ a:hover{
     left: 50%;
     transform: translate(-50%,0);
     text-align: center;
-    
     width: 1000px;
-    height: 2000px;
+    height: auto;
     background-color: rgba(255, 255, 255, 0.7);
 }
 
@@ -113,12 +112,57 @@ td{
 .cell:hover{
     cursor: pointer;
 }
-
+.obrazek{
+    float:right;
+    margin:10px;
+}
+#onlyPhone{
+    visibility: hidden;
+}
+#phonepanel, #linksphone{
+    visibility: hidden;
+}
+#links{
+    visibility: visible;
+}
 @media screen and (max-width: 1000px) {
     h2 {
-       font-size: 2.5vw;
+       font-size: calc(1.7vh + 2vw);
+       clear: both;
     }
+
     .content{
         width: 90vw;
+    }
+    .obrazek{
+        margin:0;
+        margin-top: 20px;
+        margin-bottom: 20px;
+        width: 100%;
+        height: auto;
+    }
+    #onlyPhone{
+        z-index: 1000;
+        visibility: visible;
+    }
+    #phonepanel{
+        
+        visibility: visible;
+        bottom: 0;
+        left: 0;
+        position: fixed;
+        width: 100%;
+        height: 10%;
+        background-color: rgb(255, 255, 255);
+    }
+    #gra, #links{
+        visibility: hidden;
+    }
+    #linksphone{
+        margin-top: -20px;
+        visibility: visible;
+    }
+    footer{
+        visibility: hidden;
     }
   }
