--- a/style.css
+++ b/style.css
@@ -67,8 +67,7 @@ a:hover{
 
 h1{
     margin-top: 25px;
-    text-align: justify;
-    /*text-align-last: center;*/
+    text-align: center;
     font-size: 20px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;  
 
@@ -86,19 +85,22 @@ footer{
     width: 600px;
     height: 600px;
     position: absolute;
-    top: 100px;
+    top: 130px;
     left: 50%;
     transform: translate(-50%, 0%);
     margin: 0;
     padding: 0;
     border: 0;
 }
-table, td, tr, tbody{
+td{
+    border: 1px solid black;
+}
+table, #dlaczegotd, tr, tbody{
     margin: 0;
     padding: 0;
     border: 0;
 }
-td{
+#dlaczegotd{
     width: 75px;
     height: 75px;
 }
@@ -125,6 +127,9 @@ td{
 #links{
     visibility: visible;
 }
+
+
+
 @media screen and (max-width: 1000px) {
     h2 {
        font-size: calc(1.7vh + 2vw);
